@@ -2,6 +2,7 @@ package com.familie.cheltuieli_familie.service;
 
 import com.familie.cheltuieli_familie.dto.EmbeddedExpense;
 import com.familie.cheltuieli_familie.model.ExpenseEntity;
+import com.familie.cheltuieli_familie.exception.VectorStoreException;
 import dev.langchain4j.data.document.Document;
 import dev.langchain4j.data.document.Metadata;
 import dev.langchain4j.data.document.splitter.DocumentSplitters;
@@ -11,6 +12,7 @@ import dev.langchain4j.model.embedding.EmbeddingModel;
 import dev.langchain4j.store.embedding.qdrant.QdrantEmbeddingStore;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.*;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
@@ -21,11 +23,20 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 public class QdrantVectorService {
+
+    private static final String KEY_CATEGORY = "category";
+    private static final String KEY_PERSON = "person";
+    private static final String KEY_LOCATION = "location";
+    private static final String KEY_DATE = "date";
+    private static final String KEY_AMOUNT = "amount";
+    private static final String KEY_ID = "id";
+    private static final String QDRANT_RESULT = "result";
+    private static final String MATCH = "match";
+    private static final String VALUE = "value";
 
     private final QdrantEmbeddingStore embeddingStore;
     private final EmbeddingModel embeddingModel;
@@ -55,12 +66,12 @@ public class QdrantVectorService {
         }
 
         Metadata metadata = new Metadata();
-        metadata.put("id", expense.getId());
-        metadata.put("amount", expense.getAmount().doubleValue());
-        if (expense.getCategory() != null) metadata.put("category", expense.getCategory());
-        if (expense.getPerson() != null) metadata.put("person", expense.getPerson());
-        if (expense.getLocation() != null) metadata.put("location", expense.getLocation());
-        if (expense.getDate() != null) metadata.put("date", expense.getDate().toString());
+        metadata.put(KEY_ID, expense.getId());
+        metadata.put(KEY_AMOUNT, expense.getAmount().doubleValue());
+        if (expense.getCategory() != null) metadata.put(KEY_CATEGORY, expense.getCategory());
+        if (expense.getPerson() != null) metadata.put(KEY_PERSON, expense.getPerson());
+        if (expense.getLocation() != null) metadata.put(KEY_LOCATION, expense.getLocation());
+        if (expense.getDate() != null) metadata.put(KEY_DATE, expense.getDate().toString());
 
         Document document = Document.from(textToEmbed, metadata);
         // Use recursive splitter to handle potentially long receipts/OCR text
@@ -97,25 +108,12 @@ public class QdrantVectorService {
             body.put("filter", filter);
         }
 
-        String url = String.format("http://%s:%d/collections/%s/points/search", host, httpPort, collectionName);
-        HttpHeaders headers = new HttpHeaders();
-        headers.setContentType(MediaType.APPLICATION_JSON);
-        HttpEntity<Map<String, Object>> entity = new HttpEntity<>(body, headers);
-
-        try {
-            ResponseEntity<Map> response = restTemplate.postForEntity(url, entity, Map.class);
-            if (response.getStatusCode() == HttpStatus.OK && response.getBody() != null) {
-                List<Map<String, Object>> results = (List<Map<String, Object>>) response.getBody().get("result");
-                if (results != null) {
-                    return results.stream()
-                            .map(this::mapRestResultToEmbeddedExpense)
-                            .collect(Collectors.toList());
-                }
-            }
-        } catch (Exception e) {
-            log.error("Qdrant search failed: {}", e.getMessage());
+        List<Map<String, Object>> results = executeQdrantSearch(body);
+        if (results != null) {
+            return results.stream()
+                    .map(this::mapRestResultToEmbeddedExpense)
+                    .toList();
         }
-
         return List.of();
     }
 
@@ -123,16 +121,16 @@ public class QdrantVectorService {
         List<Map<String, Object>> conditions = new ArrayList<>();
 
         if (category != null && !category.isEmpty()) {
-            conditions.add(Map.of("key", "category", "match", Map.of("value", category)));
+            conditions.add(Map.of("key", KEY_CATEGORY, MATCH, Map.of(VALUE, category)));
         }
         if (person != null && !person.isEmpty()) {
-            conditions.add(Map.of("key", "person", "match", Map.of("value", person)));
+            conditions.add(Map.of("key", KEY_PERSON, MATCH, Map.of(VALUE, person)));
         }
         if (from != null) {
-            conditions.add(Map.of("key", "date", "range", Map.of("gte", from.toString())));
+            conditions.add(Map.of("key", KEY_DATE, "range", Map.of("gte", from.toString())));
         }
         if (to != null) {
-            conditions.add(Map.of("key", "date", "range", Map.of("lte", to.toString())));
+            conditions.add(Map.of("key", KEY_DATE, "range", Map.of("lte", to.toString())));
         }
 
         if (conditions.isEmpty()) {
@@ -149,20 +147,20 @@ public class QdrantVectorService {
         double score = ((Number) result.get("score")).doubleValue();
 
         Long id = null;
-        if (payload != null && payload.get("id") != null) {
-            Object idObj = payload.get("id");
-            if (idObj instanceof Number) {
-                id = ((Number) idObj).longValue();
+        if (payload != null && payload.get(KEY_ID) != null) {
+            Object idObj = payload.get(KEY_ID);
+            if (idObj instanceof Number number) {
+                id = number.longValue();
             } else {
                 id = Long.parseLong(idObj.toString());
             }
         }
 
         BigDecimal amount = null;
-        if (payload != null && payload.get("amount") != null) {
-            Object amtObj = payload.get("amount");
-            if (amtObj instanceof Number) {
-                amount = BigDecimal.valueOf(((Number) amtObj).doubleValue());
+        if (payload != null && payload.get(KEY_AMOUNT) != null) {
+            Object amtObj = payload.get(KEY_AMOUNT);
+            if (amtObj instanceof Number number) {
+                amount = BigDecimal.valueOf(number.doubleValue());
             } else {
                 amount = new BigDecimal(amtObj.toString());
             }
@@ -171,10 +169,10 @@ public class QdrantVectorService {
         return EmbeddedExpense.builder()
                 .id(id)
                 .amount(amount)
-                .category(payload != null ? (String) payload.get("category") : null)
-                .person(payload != null ? (String) payload.get("person") : null)
-                .location(payload != null ? (String) payload.get("location") : null)
-                .date(parseLocalDate(payload != null ? (String) payload.get("date") : null))
+                .category(payload != null ? (String) payload.get(KEY_CATEGORY) : null)
+                .person(payload != null ? (String) payload.get(KEY_PERSON) : null)
+                .location(payload != null ? (String) payload.get(KEY_LOCATION) : null)
+                .date(parseLocalDate(payload != null ? (String) payload.get(KEY_DATE) : null))
                 .rawInput(payload != null ? (String) payload.get("text_segment") : null)
                 .score(score)
                 .build();
@@ -189,28 +187,32 @@ public class QdrantVectorService {
         }
     }
 
+    private List<Map<String, Object>> executeQdrantSearch(Map<String, Object> body) {
+        String url = String.format("http://%s:%d/collections/%s/points/search", host, httpPort, collectionName);
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.APPLICATION_JSON);
+        HttpEntity<Map<String, Object>> entity = new HttpEntity<>(body, headers);
+        try {
+            ResponseEntity<Map<String, Object>> response = restTemplate.exchange(
+                    url, HttpMethod.POST, entity, new ParameterizedTypeReference<>() {});
+            if (response.getStatusCode() == HttpStatus.OK && response.getBody() != null) {
+                return (List<Map<String, Object>>) response.getBody().get(QDRANT_RESULT);
+            }
+        } catch (Exception e) {
+            log.error("Qdrant search failed: {}", e.getMessage());
+        }
+        return List.of();
+    }
+
     public boolean existsInVectorStore(Long id) {
         Map<String, Object> body = new HashMap<>();
         body.put("vector", new float[2048]);
         body.put("limit", 1);
         body.put("with_vector", false);
         body.put("with_payload", true);
-        body.put("filter", Map.of("must", List.of(Map.of("key", "id", "match", Map.of("value", id.toString())))));
+        body.put("filter", Map.of("must", List.of(Map.of("key", KEY_ID, MATCH, Map.of(VALUE, id.toString())))));
 
-        String url = String.format("http://%s:%d/collections/%s/points/search", host, httpPort, collectionName);
-        HttpHeaders headers = new HttpHeaders();
-        headers.setContentType(MediaType.APPLICATION_JSON);
-        HttpEntity<Map<String, Object>> entity = new HttpEntity<>(body, headers);
-
-        try {
-            ResponseEntity<Map> response = restTemplate.postForEntity(url, entity, Map.class);
-            if (response.getStatusCode() == HttpStatus.OK && response.getBody() != null) {
-                List<Map<String, Object>> results = (List<Map<String, Object>>) response.getBody().get("result");
-                return results != null && !results.isEmpty();
-            }
-        } catch (Exception e) {
-            log.error("Qdrant exists check failed: {}", e.getMessage());
-        }
-        return false;
+        List<Map<String, Object>> results = executeQdrantSearch(body);
+        return results != null && !results.isEmpty();
     }
 }
